# FootLumen_discord

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  Makefile  PLANS.md  README.md  START_ROUTINE.MD  alembic.ini  blueprint.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  sprints_prompts_consolides.md
.claude/: settings.json
alembic/: env.py
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
config/: competitions.example.yaml  competitions_2026.example.yaml  competitions_history.yaml  competitions_worldcup.yaml  discord_channels.example.yaml  discord_webhooks.example.yaml  prod.crontab  prod_linux.crontab  prod_worldcup.crontab  prod_worldcup.example.crontab  worldcup_combos.example.yaml  worldcup_combos.yaml
docs/: api_football_players_cache.json  api_football_players_reference.json  api_football_players_reference.md  api_football_reference.md  architecture.md  brand.md  codex_guide.md  codex_workflow.md  dashboard_app_api_quickstart.md  data_contract.md  developer_guide.md  development.md  modeling_strategy.md  observability.md  operations_guide.md  power_rating_pi_rating_sprint_prompts.md  product_spec.md  production_runbook.md  security.md  sprint_prompts.md  user_guide.md  v3_plan.md  web_api_contract.md  web_api_deployment.md  web_api_security.md  worldcup_combos.md  worldcup_data_quality.md  worldcup_only_vps_mode.md  worldcup_public_rollout.md
footlumen_identity_pack/: README.md  brand-guide.html  manifest.json
reports/: public_ready_audit.md  release_main_public_ready.md  web_api_v1_readiness.md
scripts/: audit_worldcup_fixture_times.py  backfill_season.sh  backtest_ou_v2_publication.py  build_group_incentive_features.py  build_squad_strength_features.py  build_worldcup_feature_matrix.py  compute_national_elo.py  daily_late.sh  daily_morning.sh  daily_ou.sh  docker-entrypoint.sh  dry_run_worldcup_combo_builder.py  dry_run_worldcup_combo_candidates.py  dry_run_worldcup_combo_publish.py  football_predictor_cli.sh  ingest_fifa_rankings.py  ingest_historical_ou_csv.py  ingest_national_results.py  init_local.sh  install_prod_cron.sh  lib.sh  lock_worldcup_combos.py  maintenance_worldcup_combo_snapshots.py  publish_daily_discord.sh  publish_match_analyses.sh  publish_match_results.sh  publish_weekly_score.sh  publish_worldcup_combos.py  refresh_all_leagues.sh  repair_editable_install.py  run_predict_today.sh  run_worldcup_combos.py  security_scan.py  settle_worldcup_combos.py  smoke_api_v1.sh  smoke_test.sh  smoke_test_live.sh  smoke_test_local.sh  sync_worldcup_odds_snapshots.py  train_backtest_all.sh  (+3 more)
tests/: conftest.py  test_api_client.py  test_availability_features.py  test_backtesting_evaluator.py  test_backtesting_metrics.py  test_confidence.py  test_confidence_threshold_calibration.py  test_daily_automation_scripts.py  test_data_quality.py  test_dataset_builder.py  test_db_models.py  test_diagnostics.py  test_discord_cli.py  test_discord_config.py  test_discord_daily_formatters.py  test_discord_delivery.py  test_discord_formatter.py  test_discord_provisioning.py  test_discord_router.py  test_discord_webhook.py  test_draw_safety.py  test_explain.py  test_feature_builder.py  test_fixture_ingestion.py  test_global_features.py  test_healthcheck.py  test_ingest_fixtures.py  test_ingest_match_details.py  test_ingest_odds.py  test_ingest_reference.py  test_ingest_standings.py  test_match_publication.py  test_model_approval.py  test_ou_daily.py  (+56 more)
(+290 files in other folders)
