[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "football-predictor"
version = "0.1.0"
description = "Football 1X2 predictor using API-Football with point-in-time data safeguards."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13",
  "httpx>=0.27",
  "joblib>=1.4",
  "numpy>=1.26",
  "pandas>=2.2",
  "pyarrow>=15",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "PyYAML>=6.0",
  "python-dotenv>=1.0",
  "rich>=13.7",
  "scikit-learn>=1.4",
  "sqlalchemy>=2.0",
  "typer>=0.12",
]

[project.optional-dependencies]
ml = [
  "lightgbm>=4.3",
  "xgboost>=2.0",
  "catboost>=1.2",
]
dev = [
  "mypy>=1.10",
  "pre-commit>=3.7",
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "ruff>=0.5",
]

[project.scripts]
football-predictor = "football_predictor.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.11"
packages = ["football_predictor"]
strict = false
warn_unused_ignores = true
warn_return_any = true
