[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "football-predictor"
version = "0.1.0"
description = "FootLumen football predictions using API-Football with point-in-time data safeguards."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "alembic>=1.13",
  "httpx>=0.27",
  "joblib>=1.4",
  "numpy>=1.26",
  "pandas>=2.2",
  "pyarrow>=15",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "PyYAML>=6.0",
  "python-dotenv>=1.0",
  "rich>=13.7",
  "scikit-learn>=1.4",
  "sqlalchemy>=2.0",
  "typer>=0.12",
]

[project.optional-dependencies]
ml = [
  "lightgbm>=4.3",
]
dev = [
  "mypy>=1.10",
  "pre-commit>=3.7",
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "ruff>=0.5",
]

[project.scripts]
football-predictor = "football_predictor.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
# Public-ready baseline: keep existing O/U and historical migration debt out of
# CI while the production infra is made reproducible. New code outside these
# files remains checked by the global rules above.
"alembic/versions/*.py" = ["E501"]
"scripts/ingest_historical_ou_csv.py" = ["E501", "I001"]
"src/football_predictor/ou_model/features/h2h_features.py" = ["E501"]
"src/football_predictor/ou_model/ingestion/ingest_ou_odds.py" = ["E501", "F401"]
"src/football_predictor/ou_model/modeling/*.py" = [
  "E501",
  "F401",
  "I001",
  "SIM105",
  "UP017",
  "UP037",
]

[tool.mypy]
python_version = "3.11"
packages = ["football_predictor"]
strict = false
ignore_missing_imports = true
warn_unused_ignores = false
warn_return_any = false
disable_error_code = [
  "arg-type",
  "assignment",
  "call-overload",
  "dict-item",
  "import-untyped",
  "misc",
  "no-any-return",
  "no-redef",
  "operator",
  "return-value",
  "union-attr",
  "unused-ignore",
  "var-annotated",
]
